Fix canvas controls style and layout on mobile

--- a/src/assets/style/components/canvas/_canvas-controls.scss
+++ b/src/assets/style/components/canvas/_canvas-controls.scss
@@ -108,6 +108,7 @@
   .btn {
     @include controlBtn;
     background-color: $control-btn-bg-clr;
+    color: $main-font-clr;
 
     &::before {
       font-size: em(14px);
